[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Autoload/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Tools/CameraShake.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Tools/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Scenes/GameOverlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Level 01.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Level 03.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level 02.tscn" type="PackedScene" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
background_canvas_max_layer = 1
glow_levels/4 = true
glow_intensity = 5.06
glow_strength = 1.42
glow_blend_mode = 1
glow_bicubic_upscale = true
glow_high_quality = true

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="GameStateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="MainMenu" parent="." instance=ExtResource( 3 )]

[node name="GameOverlay" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Levels" type="Node2D" parent="."]

[node name="Level 01" parent="Levels" instance=ExtResource( 6 )]

[node name="Level 02" parent="Levels" instance=ExtResource( 8 )]
visible = false

[node name="Level 03" parent="Levels" instance=ExtResource( 7 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
